--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,4 +1,6 @@
-.header{
+body{
+    font-family:Arial, Helvetica, sans-serif;
+}.header{
     width:100%;
     height:20px;
     background-color: blueviolet;
@@ -7,9 +9,35 @@
 .banner{
     background:url(/images/dispensary.jpg);
     background-size: cover;
+    padding-top:100px;
+    padding-bottom: 100px;
 }
 .homepagecontainer{
     width:100%;
     max-width:900px;
     margin:0 auto;
+    height:50vh;
+}
+.bannerheader h1{
+    font-size :100px;
+    color:aliceblue;
+    line-height: 100%;
+
+}
+.bannerheader p{
+    font-size: 40px;
+    color:aliceblue;
+    text-transform:uppercase;
+    margin-top:-30px;
+    line-height: 100%;
+
+
+
+}
+.bannertagline p{
+    margin-top:20px;
+
+    font-size: 25px;
+    color:aliceblue;
+    color:blue;
 }
