--- a/css/homepage.css
+++ b/css/homepage.css
@@ -2,8 +2,20 @@ body{
     font-family:Arial, Helvetica, sans-serif;
 }.header{
     width:100%;
-    height:20px;
     background-color: blueviolet;
+    padding:20px 0px;
+    text-align: right;
+
+}
+.header a{
+    font-size: 20px;
+    color:white;
+    border:2px solid white;
+    padding:5px 10px;
+    text-decoration:none ;
+    border-radius:5px;
+    margin-right:50px;
+   
 
 }
 .banner{
