--- a/css/dasboard.css
+++ b/css/dasboard.css
@@ -1,3 +1,6 @@
+body{
+    padding: 0%;
+}
 .dashboardMainContainer{
     display:flex;
     flex-direction: row;
@@ -10,7 +13,7 @@
 
 }
 .dashboard_content_container{
-    width:70%;
+    width:100%;
     background:#f4f6f9 ;
     
 }
@@ -59,7 +62,7 @@ ul.dashboard_menu_lists li  a{
 
 }
 ul.dashboard_menu_lists li  a{
-    font-size:25px;
+    font-size:20px;
 }
 ul.dashboard_menu_lists li.menuactive{
     background: #f685a1;
@@ -72,7 +75,7 @@ ul.dashboard_menu_lists li:hover{
     transition:0.3s all;
 }
 .dashboard_content_topNav{
-    background: #fff;
+    background: #b1b0b0;
     padding:20px;
 
 
