--- a/css/dasboard.css
+++ b/css/dasboard.css
@@ -24,23 +24,26 @@ h3.dashboard_logo{
     margin-bottom: 10%;
 
 }
-.dashboard_sidebar_user{
-   text-align:center;
-   position: relative;
-   padding-bottom: 20px;
-   border-bottom:1px solid #fff;
-    top:1%;
+.dashboard_sidebar_user {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #fff;
+    top: 1%;
 }
-.dashboard_sidebar_user img{
-    width:80px;
-    display:inline-block;
-    border-radius:50px;
-    border:2px solid #f685a1;
-    margin-right:5px;
-    margin-left:120px;
-    
 
+.dashboard_sidebar_user img {
+    width: 80px;
+    height: 80px; /* Add a height to maintain aspect ratio */
+    border-radius: 50%;
+    border: 2px solid #f685a1;
+    margin: 0 auto; /* Center the image horizontally */
+    margin-bottom: 5px;
 }
+
 ul.dashboard_menu_lists{
     padding:5px;
     margin-top:20px;
