--- a/css/homepage.css
+++ b/css/homepage.css
@@ -19,7 +19,7 @@ body{
 
 }
 .banner{
-    background:url(/images/dispensary.jpg);
+    background-image: url('../images/download.jpg');
     background-size: cover;
     padding-top:100px;
     padding-bottom: 100px;
@@ -32,13 +32,13 @@ body{
 }
 .bannerheader h1{
     font-size :100px;
-    color:aliceblue;
+    color:rgb(33, 33, 33);
     line-height: 100%;
 
 }
 .bannerheader p{
     font-size: 40px;
-    color:aliceblue;
+    color:rgb(49, 49, 50);
     text-transform:uppercase;
     margin-top:-30px;
     line-height: 100%;
