--- a/css/dasboard.css
+++ b/css/dasboard.css
@@ -100,3 +100,64 @@ a#logoutButton{
     height:100%;
     min-height: 800px;
 }
+/* Reset some default styles */
+body, h1, h2, h3, p, ul, li {
+    margin: 0;
+    padding: 0;
+}
+
+/* Set a base font size and font family */
+body {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+}
+
+
+
+.appForm {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 320px;
+}
+
+.appForm div {
+    margin-bottom: 15px;
+}
+
+.appForm label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.appForm input[type="text"],
+.appForm input[type="email"],
+.appForm input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.appForm button[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+.appForm button[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+/* Center the button within its container */
+.appForm div:last-child {
+    text-align: center;
+}
