--- a/css/dasboard.css
+++ b/css/dasboard.css
@@ -161,3 +161,19 @@ body {
 .appForm div:last-child {
     text-align: center;
 }
+p.responseMessage{
+    font-size: 18px;
+    text-align: center;
+    margin-top: 33px;
+    background: rgba(0, 128, 0, 0.1);
+    padding:20px;
+
+}
+p.responseMessage__error{
+    background: rgba(0, 128, 0, 0.1);
+
+}
+p.responseMessage__success{
+    background: rgba(0, 128, 0, 0.1);
+    
+}
