--- a/css/dasboard.css
+++ b/css/dasboard.css
@@ -227,25 +227,33 @@ i.maimmenuarrowicon{
     margin-top:7px;
 
 }
+.useradd{
+    width:500px;
+    height:500px;
+    border-radius:30px;
+    border:2px black solid;
+    margin-left:200px;
+}
 .product-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 20px; /* Add some gap between product cards */
+    display: flex; /* Use flexbox to create a flexible container */
+    flex-wrap: wrap; /* Allow cards to wrap to the next line if needed */
+    justify-content: space-between; 
+   /* Distribute space between cards */
 }
 .product-card {
     background-color: #ffffff;
     border: 1px solid #1c1a1a;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+   
     margin: 20px;
-    width:130px;
-    height:200px;
+    width: 130px;
+    height:210px;
    
 }
 
 .product-image {
+    margin-top:20px;
     text-align: center;
     width: 100px;
     align-self: center;
@@ -259,6 +267,7 @@ i.maimmenuarrowicon{
 
 .product-details {
     margin-top: 10px;
+    align-items: center;
 }
 
 .product-details h2 {
