--- a/css/homepage.css
+++ b/css/homepage.css
@@ -10,7 +10,7 @@
   
   /* Apply styles to the header */
   .header {
-    background-color: #8B4513; /* Brown color */
+    background-color: #e96bf2; /* Brown color */
     color: #101010;
     padding: 20px;
     display: flex;
